Container/Kubernetes/k3s-soniiit/Prometheus/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.home.soniiit.net`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 8080
  tls:
    secretName: home-soniiit-net-selfsigned-tls
